kubernetes/product-deployment-v2.yaml
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: product-v2
#
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: product-service-v2
#  namespace: product-v2
#spec:
#  replicas: 2
#  selector:
#    matchLabels:
#      app: product-service
#  template:
#    metadata:
#      labels:
#        app: product-service
#    spec:
#      containers:
#        - name: product-service
#          image: arjun02bhosale/product-service:v2.0.0
#          ports:
#            - containerPort: 8080
#          resources:
#            limits:
#              memory: "512Mi"
#              cpu: "500m"
#            requests:
#              memory: "256Mi"
#              cpu: "250m"
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: product-service
#  namespace: product-v2
#spec:
#  selector:
#    app: product-service
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 8080



apiVersion: v1
kind: Namespace
metadata:
  name: product-v2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-v2
  namespace: product-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: pooja06bhosale/product-service:v2.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-v2
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
