kubernetes/product-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: product-ingress
#  namespace: product-v1
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - path: /v1/(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: product-service
#                port:
#                  number: 80
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: product-ingress
#  namespace: product-v1-1
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - path: /v1.1/(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: product-service
#                port:
#                  number: 80
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: product-ingress
#  namespace: product-v2
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#spec:
#  rules:
#    - host: localhost
#      http:
#        paths:
#          - path: /v2/(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: product-service
#                port:
#                  number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress-v1
  namespace: product-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /v1/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress-v1-1
  namespace: product-v1-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /v1.1/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress-v2
  namespace: product-v2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /v2/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80
